syntax = "proto3";

package com.coralogix.metrics.metrics_limits;

import "google/protobuf/empty.proto";

message UpdateLimitsRequest {
    uint32 tenant_id = 1;
    MeterLimits limits = 2;
}

message GetLimitsRequest {
    uint32 tenant_id = 1;
}

message MeterLimits {
    uint64 total_unique_metric_names_daily = 1;
    uint64 total_unique_series_daily = 2;
    uint64 unique_series_daily = 3;
    uint64 total_series_queried = 4;
    uint64 total_samples_queried = 5;
    uint64 total_datapoints_queried = 6;
}

service MetricsLimitService {
    rpc UpdateLimits(UpdateLimitsRequest) returns (google.protobuf.Empty) {}
    rpc GetLimits(GetLimitsRequest) returns (MeterLimits) {}
}
